--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     //Design
-    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -45,9 +45,10 @@ dependencies {
     compile 'com.mxn.soul:flowingdrawer-core:2.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
 
-    //EventBus
-    compile 'org.greenrobot:eventbus:3.1.1'
+//    //EventBus
+//    compile 'org.greenrobot:eventbus:3.1.1'
 
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
