--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -29,8 +30,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -38,19 +37,19 @@ dependencies {
 
     //Design
     compile 'com.android.support:design:26.+'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
-    compile 'com.mxn.soul:flowingdrawer-core:2.0.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
 
-//    //EventBus
-//    compile 'org.greenrobot:eventbus:3.1.1'
+//  Firebase
+    compile 'com.firebaseui:firebase-ui:0.6.0'
 
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
