--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.alex.ruletkacsgo">
+          package="com.example.alex.banana">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activity.main.MainActivity"
+            android:name="com.example.alex.banana.ui.activity.main.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -23,7 +23,7 @@
         </activity>
 
         <activity
-            android:name=".ui.activity.settings.SettingsActivity"
+            android:name="com.example.alex.banana.ui.activity.settings.SettingsActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
